Fixed html error where page div wasnt covering entire site, created new form block

--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -19,74 +19,3 @@
 .reservation__form {
   margin: 0 auto 120px;
 }
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-  border: none;
-  padding: 0;
-  margin: 0;
-  justify-content: center;
-}
-
-.form__label {
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  padding: 32px 0 8px;
-}
-
-.form__input {
-  max-width: 385px;
-  height: 60px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  border-radius: 4px;
-  border-width: 1px;
-  border-color: #838383;
-  color: black;
-  padding: 0 0 0 20px;
-}
-
-.form__input::placeholder {
-  color: #838383;
-}
-
-.form__button {
-  height: 60px;
-  margin: 32px 0 32px;
-  border-radius: 4px;
-  background-color: #2f80ed;
-  font-style: normal;
-  font-weight: 500;
-  color: #fff;
-  padding: 0;
-  opacity: 100%;
-  transition: opacity 0.5s ease-in-out;
-  border: none;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
-
-.form__fieldset_type-checkbox {
-  display: flex;
-  flex-direction: row;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  height: 20px;
-  width: 20px;
-  margin-right: 12px;
-  background-color: #2f80ed;
-  background-image: url(../images/check.svg);
-}
-
-.form__label_type-checkbox {
-  padding: 0;
-}
